[workspace]
members = [
	"cli",
	"integration-tests",
	"mock-server",
	"sdk",
	"sdk-httpmock",
	"test-common",
	"xtask",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.98"
assert_cmd = "2.0.17"
async-trait = "0.1.88"
base64 = "0.22.1"
built = { version = "0.8.0", features = ["git2"] }
bytes = "1.10.1"
camino = { version = "1.1", features = ["serde1"] }
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.44", features = ["derive", "string", "env", "wrap_help"] }
clap_complete = "4.5.55"
colored = "3.0.0"
comfy-table = "7.1.4"
crossterm = { version = "0.29.0", features = [ "event-stream" ] }
dialoguer = "0.11.0"
dirs = "6.0.0"
dropshot = "0.16.2"
env_logger = "0.11.8"
expectorate = { version = "1.2.0", features = ["predicates"] }
flume = "0.11.1"
futures = "0.3.31"
httpmock = "0.7.0"
humantime = "2.2.0"
indexmap = "2.10.0"
indicatif = "0.18.0"
libc = "0.2.175"
log = "0.4.26"
md5 = "0.7.0"
newline-converter = "0.3.0"
oauth2 = "5.0.0"
open = "5.3.2"
oxide = { path = "sdk", version = "0.12.0" }
oxide-httpmock = { path = "sdk-httpmock", version = "0.12.0" }
oxnet = "0.1.3"
predicates = "3.1.3"
pretty_assertions = "1.4.1"
proc-macro2 = "1.0.95"
progenitor = { git = "https://github.com/oxidecomputer/progenitor", default-features = false }
progenitor-client = "0.11.0"
quote = "1.0.40"
rand = "0.9.2"
ratatui = "0.29.0"
rcgen = { version = "0.13.2", features = ["pem"] }
regex = "1.11.1"
regress = "0.10.4"
reqwest = "0.12.22"
rustc_version = "0.4.1"
rustfmt-wrapper = "0.2.1"
schemars = { version = "0.8.20", features = ["chrono", "uuid1"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
similar = "2.7.0"
support-bundle-viewer = "0.1.2"
syn = "2.0.104"
tabwriter = "1.4.1"
thiserror = "2.0.11"
tempfile = "3.20.0"
test-common = { path = "test-common" }
thouart = { git = "https://github.com/oxidecomputer/thouart" }
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = "0.7.16"
toml = "0.8.23"
toml_edit = "0.22.24"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
url = "2.5.4"
uuid = { version = "1.18.0", features = ["serde", "v4"] }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

#[patch."https://github.com/oxidecomputer/progenitor"]
#progenitor = { path = "../progenitor/progenitor" }
#[patch."https://github.com/oxidecomputer/typify"]
#typify = { path = "../typify/typify" }
