[workspace]
members = [
	"cli",
	"integration-tests",
	"mock-server",
	"sdk",
	"sdk-httpmock",
	"test-common",
	"xtask",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.100"
assert_cmd = "2.0.17"
async-trait = "0.1.89"
base64 = "0.22.1"
built = { version = "0.8.0", features = ["git2"] }
bytes = "1.10.1"
camino = { version = "1.2", features = ["serde1"] }
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.51", features = ["derive", "string", "env", "wrap_help"] }
clap_complete = "4.5.60"
colored = "3.0.0"
crossterm = { version = "0.29.0", features = [ "event-stream" ] }
dialoguer = "0.12.0"
dirs = "6.0.0"
dropshot = "0.16.4"
env_logger = "0.11.8"
expectorate = { version = "1.2.0", features = ["predicates"] }
flume = "0.11.1"
futures = "0.3.31"
httpmock = "0.7.0"
humantime = "2.3.0"
indicatif = "0.18.2"
libc = "0.2.177"
log = "0.4.28"
md5 = "0.8.0"
newline-converter = "0.3.0"
oauth2 = "5.0.0"
open = "5.3.2"
oxide = { path = "sdk", version = "0.13.0" }
oxide-httpmock = { path = "sdk-httpmock", version = "0.13.0" }
oxnet = "0.1.3"
predicates = "3.1.3"
pretty_assertions = "1.4.1"
progenitor = { git = "https://github.com/oxidecomputer/progenitor", default-features = false }
progenitor-client = "0.11.2"
rand = "0.9.2"
ratatui = "0.29.0"
rcgen = { version = "0.14.5", features = ["pem"] }
regex = "1.12.2"
regress = "0.10.5"
reqwest = "0.12.24"
rustc_version = "0.4.1"
rustfmt-wrapper = "0.2.1"
schemars = { version = "0.8.20", features = ["chrono", "uuid1"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.145"
similar = "2.7.0"
support-bundle-viewer = "0.1.2"
tabwriter = "1.4.1"
thiserror = "2.0.17"
tempfile = "3.23.0"
test-common = { path = "test-common" }
thouart = { git = "https://github.com/oxidecomputer/thouart" }
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = "0.7.17"
toml = "0.9.8"
toml_edit = "0.23.7"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
url = "2.5.7"
uuid = { version = "1.18.1", features = ["serde", "v4"] }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

#[patch."https://github.com/oxidecomputer/progenitor"]
#progenitor = { path = "../progenitor/progenitor" }
#[patch."https://github.com/oxidecomputer/typify"]
#typify = { path = "../typify/typify" }
