[workspace]
members = [
	"cli",
	"integration-tests",
	"mock-server",
	"sdk",
	"sdk-httpmock",
	"test-common",
	"xtask",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.101"
assert_cmd = "2.1.2"
async-trait = "0.1.89"
base64 = "0.22.1"
built = { version = "0.8.0", features = ["git2"] }
bytes = "1.11.1"
camino = { version = "1.2", features = ["serde1"] }
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.58", features = ["derive", "string", "env", "wrap_help"] }
clap_complete = "4.5.65"
colored = "3.1.1"
crossterm = { version = "0.29.0", features = [ "event-stream" ] }
dialoguer = "0.12.0"
dirs = "6.0.0"
dropshot = "0.16.7"
env_logger = "0.11.9"
expectorate = { version = "1.2.0", features = ["predicates"] }
flume = "0.12.0"
futures = "0.3.32"
http = "1.4.0"
httpmock = "0.8.3"
humantime = "2.3.0"
indicatif = "0.18.4"
libc = "0.2.182"
log = "0.4.29"
md5 = "0.8.0"
newline-converter = "0.3.0"
oauth2 = { version = "5.0.0", default-features = false }
open = "5.3.3"
oxide = { path = "sdk", version = "0.14.0" }
oxide-httpmock = { path = "sdk-httpmock", version = "0.14.0" }
oxnet = "0.1.4"
predicates = "3.1.4"
pretty_assertions = "1.4.1"
progenitor = { git = "https://github.com/oxidecomputer/progenitor", default-features = false }
progenitor-client = "0.12.0"
rand = "0.9.2"
ratatui = "0.30.0"
rcgen = { version = "0.14.7", features = ["pem"] }
regex = "1.12.3"
regress = "0.10.5"
reqwest = "0.13.2"
rustc_version = "0.4.1"
rustfmt-wrapper = "0.2.1"
schemars = { version = "0.8.20", features = ["chrono", "uuid1"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.149"
similar = "2.7.0"
support-bundle-viewer = "0.1.2"
tabwriter = "1.4.1"
thiserror = "2.0.18"
tempfile = "3.25.0"
test-common = { path = "test-common" }
thouart = { git = "https://github.com/oxidecomputer/thouart" }
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = "0.7.18"
toml = "0.9.11"
toml_edit = "0.24.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
url = "2.5.8"
uuid = { version = "1.21.0", features = ["serde", "v4"] }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

#[patch."https://github.com/oxidecomputer/progenitor"]
#progenitor = { path = "../progenitor/progenitor" }
#[patch."crates-io"]
#progenitor-client = { path = "../progenitor/progenitor-client" }
#[patch."https://github.com/oxidecomputer/typify"]
#typify = { path = "../typify/typify" }
