[package]
name = "oxide-cli"
description = "CLI for the Oxide rack"
version = "0.13.0+20250730.0.0"
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/oxidecomputer/oxide.rs"
readme = "README.md"
publish = false

default-run = "oxide"

[[bin]]
name = "oxide"
path = "src/main.rs"

[package.metadata.dist]
dist = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
camino = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
colored = { workspace = true }
crossterm = { workspace = true }
dialoguer = { workspace = true }
dirs = { workspace = true }
env_logger = { workspace = true }
futures = { workspace = true }
humantime = { workspace = true }
indicatif = { workspace = true }
log = { workspace = true }
md5 = { workspace = true }
oauth2 = { workspace = true }
open = { workspace = true }
oxide = { workspace = true, features = ["clap", "extras"] }
oxnet = { workspace = true }
predicates = { workspace = true }
ratatui = { workspace = true }
reqwest = { workspace = true, features = ["native-tls-vendored"] }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
support-bundle-viewer = { workspace = true }
tabwriter = { workspace = true }
thouart = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
dropshot = { workspace = true }
expectorate = { workspace = true }
httpmock = { workspace = true }
libc = { workspace = true }
oxide-httpmock = { workspace = true }
predicates = { workspace = true }
pretty_assertions = { workspace = true }
rcgen = { workspace = true }
rand = { workspace = true, features = ["small_rng"] }
tempfile = { workspace = true }
test-common = { workspace = true }

[build-dependencies]
built = { workspace = true }
