[package]
name = "oxide-cli"
version = "0.17.0+2026060800.0.0"
edition = "2021"
description = "CLI for the Oxide rack"
readme = "README.md"
repository = "https://github.com/oxidecomputer/oxide.rs"
license = "MPL-2.0"
publish = false

default-run = "oxide"

[package.metadata.dist]
dist = true

[[bin]]
name = "oxide"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
camino = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
colored = { workspace = true }
crossterm = { workspace = true }
dialoguer = { workspace = true }
dirs = { workspace = true }
env_logger = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
humantime = { workspace = true }
indicatif = { workspace = true }
log = { workspace = true }
md5 = { workspace = true }
oauth2 = { workspace = true }
oauth2-reqwest = { workspace = true }
open = { workspace = true }
oxide = { workspace = true, features = ["clap", "extras"] }
oxnet = { workspace = true }
predicates = { workspace = true }
ratatui = { workspace = true }
reqwest = { workspace = true, features = ["gzip"] }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
support-bundle-viewer = { workspace = true }
tabwriter = { workspace = true }
thouart = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
dropshot = { workspace = true }
expectorate = { workspace = true }
httpmock = { workspace = true }
libc = { workspace = true }
oxide-httpmock = { workspace = true }
predicates = { workspace = true }
pretty_assertions = { workspace = true }
rand = { workspace = true }
rcgen = { workspace = true }
tempfile = { workspace = true }
test-common = { workspace = true }

[build-dependencies]
built = { workspace = true }
