[package]
name = "integration-tests"
version = "0.0.0"
edition = "2021"
publish = false

[dev-dependencies]
httpmock = { workspace = true }
oxide = { workspace = true, features = ["extras"] }
oxide-httpmock = { workspace = true }
rand = { workspace = true }
tempfile = { workspace = true }
test-common = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
