[package]
name = "oxide-api"
description = "A fully generated & opinionated API client for the Oxide API."
version = "0.1.0-rc.39"
documentation = "https://docs.rs/oxide-api/"
repository = "https://github.com/oxidecomputer/oxide.rs/tree/main/oxide"
readme = "README.md"
edition = "2018"
license = "MIT"

[dependencies]
anyhow = "1"
bytes = { version = "1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-humanize = "^0.2.1"
dirs = { version = "^4.0.0", optional = true }
http = "^0.2.4"
hyperx = "1"
ipnetwork = "^0.18"
log = { version = "^0.4", features = ["serde"] }
mime = "0.3"
parse-display = "^0.5"
percent-encoding = "2.1"
reqwest = { version = "0.11", default-features = false, features = ["json", "multipart", "rustls-tls"] }
schemars = { version = "0.8", features = ["bytes", "chrono", "url", "uuid"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "1"
serde_urlencoded = "^0.7"
tabled = { version = "0.8.0", features = ["color"] }
thiserror = "^1"
url = { version = "2", features = ["serde"] }
uuid = { version = "^0.8", features = ["serde", "v4"] }

[dev-dependencies]
base64 = "^0.13"
dirs = "^4.0.0"
Inflector = "^0.11.4"
nom_pem = "4"
pretty_assertions = "1"
tokio = { version = "1.8.0", features = ["full"] }

[features]
# enable etag-based http_cache functionality
httpcache = ["dirs"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
