[package]
name = "oxide-httpmock"
description = "httpmock for the Oxide rack API"
version = "0.15.0+2026021301.0.0"
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/oxidecomputer/oxide.rs"
readme = "README.md"

[dependencies]
chrono = { workspace = true }
httpmock = { workspace = true }
oxide = { workspace = true }
regex = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
