[package]
name = "oxide"
description = "SDK for the Oxide rack"
version = "0.10.0+20250212.0.0"
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/oxidecomputer/oxide.rs"
readme = "README.md"

[dependencies]
base64 = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, optional = true }
dirs = { workspace = true }
flume = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
hyper = { workspace = true }
progenitor-client = { workspace = true }
rand = { workspace = true }
regress = { workspace = true }
reqwest = { workspace = true, features = ["native-tls-vendored"] }
reqwest-middleware = { workspace = true }
reqwest-tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
thiserror =  { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
test-common = { workspace = true }
tokio = { workspace = true }

[features]
default = []
clap = ["dep:clap"]
extras = []
