[package]
name = "oxide"
description = "SDK for the Oxide rack"
version = "0.15.0+2026021301.0.0"
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/oxidecomputer/oxide.rs"
readme = "README.md"

[dependencies]
base64 = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
futures = { workspace = true }
progenitor-client = { workspace = true }
rand = { workspace = true }
regress = { workspace = true }
reqwest = { workspace = true, features = ["native-tls-vendored"] }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
thiserror =  { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

# Optional deps for the clap feature
clap = { workspace = true, optional = true }

# Optional deps for the extras feature
flume = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
test-common = { workspace = true }
tokio = { workspace = true }

[features]
default = []
clap = ["dep:clap"]
extras = ["dep:tokio", "dep:flume"]
