[package]
name = "test-common"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
chrono = { workspace = true }
rand = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
rand = { workspace = true, features = ["small_rng"] }