[package]
name = "xtask"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
clap = { workspace = true }
newline-converter = { workspace = true }
openapiv3 = { workspace = true }
progenitor = { workspace = true, default-features = false }
regex = { workspace = true }
rustc_version = { workspace = true }
rustfmt-wrapper = { workspace = true }
serde_json = { workspace = true }
similar = { workspace = true }
