[package]
name = "xtask"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
clap = { workspace = true }
indexmap = { workspace = true }
newline-converter = { workspace = true }
proc-macro2 = { workspace = true }
progenitor = { workspace = true, default-features = false }
quote = { workspace = true }
regex = { workspace = true }
rustc_version = { workspace = true }
rustfmt-wrapper = { workspace = true }
serde_json = { workspace = true }
similar = { workspace = true }
syn = { workspace = true }
